Prevent multiple timeouts when toggling hamburger menu, create a shadow behind opened menu

--- a/main/css/abstracts/_variables.scss
+++ b/main/css/abstracts/_variables.scss
@@ -6,6 +6,7 @@
 $black: #000;
 $off-white: #FFFDFA;
 $light-gray: #C5C6CE;
+$dark-gray: #494949A5;
 $dark-purple: #00001A;
 $light-vermillion: #F15D51;
 $gray-blue: #5E607A;
@@ -19,3 +20,4 @@ $main-btn-hover: $off-white;
 $separator-color: $gray-blue;
 $header-color-01: $off-yellow;
 $paragraph-color-01: $light-gray;
+$menu-shadow: $dark-gray;
