--- a/main/css/critical/_navigation.scss
+++ b/main/css/critical/_navigation.scss
@@ -7,74 +7,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
-@media only screen and (min-width: 1141px) {
-  .hamburger {
-    display: none;
-    visibility: hidden;
-    overflow: hidden;
-    height: 0;
-    width: 0;
-  }
-
-  .nav {
-    ul {
-      display: flex;
-      list-style: none;
-      width: 26.938rem;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    a {
-      color: $separator-color;
-    }
-
-    a:hover {
-      color: $light-vermillion;
-    }
-  }
-}
-
-@media only screen and (max-width: 1140px) {
-  .nav {
-    .navBar {
-      display: none;
-      visibility: hidden;
-      height: 0;
-      width: 0;
-      overflow: hidden;
-      transition: width 0.2s ease-in-out;
-    }
-
-    .navBar-hidden{
-      background-color: $main-background;
-      position: fixed;
-      top: 0;
-      right: 0;
-      z-index: 100;
-      visibility: visible;
-      display: block;
-      height: 100vh;
-
-      ul {
-        margin-top: 10rem;
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-
-        li {
-          margin: 1.5rem 4.5rem;
-        }
-      }
-    }
-
-    .navBar-active {
-      width: 70vw;
-    }
-  }
-}
-
 .container {
   z-index: 1000;
   position: relative;
@@ -91,6 +23,10 @@
   position: relative;
   border: none;
   background-color: transparent;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   &__bar {
     $bar-positionY: calc($hamburger-height / 2);
@@ -129,6 +65,95 @@
     &:nth-child(3) {
       transform-origin: center;
       transform:rotate(-135deg);
+    }
+  }
+}
+
+.shadow-active {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: $menu-shadow;
+  z-index: 50;
+}
+
+@media only screen and (min-width: 1141px) {
+  .hamburger {
+    display: none;
+    visibility: hidden;
+    overflow: hidden;
+    height: 0;
+    width: 0;
+  }
+
+  .nav {
+    ul {
+      display: flex;
+      list-style: none;
+      width: 26.938rem;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    a {
+      color: $separator-color;
+    }
+
+    a:hover {
+      color: $light-vermillion;
+    }
+  }
+}
+
+@media only screen and (max-width: 1140px) {
+  .nav {
+    .navBar {
+      display: none;
+      visibility: hidden;
+      height: 0;
+      width: 0;
+      overflow: hidden;
+      transition: width 0.2s ease-in-out;
+
+      a:hover {
+        color: $off-yellow;
+      }
+    }
+
+    .navBar-hidden{
+      background-color: $main-background;
+      position: fixed;
+      top: 0;
+      right: 0;
+      z-index: 100;
+      visibility: visible;
+      display: block;
+      height: 100vh;
+
+      ul {
+        margin-top: 10rem;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+
+        li {
+          margin: 1.5rem 4.5rem;
+        }
+      }
+    }
+
+    .navBar-active {
+      width: 40vw;
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .nav {
+    .navBar-active {
+      width: 65vw;
     }
   }
 }
