--- a/styles.css
+++ b/styles.css
@@ -86,60 +86,6 @@ a:hover, a:focus, a:active {
   align-items: center;
 }
 
-@media only screen and (min-width: 1141px) {
-  .hamburger {
-    display: none;
-    visibility: hidden;
-    overflow: hidden;
-    height: 0;
-    width: 0;
-  }
-  .nav ul {
-    display: flex;
-    list-style: none;
-    width: 26.938rem;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .nav a {
-    color: #5E607A;
-  }
-  .nav a:hover {
-    color: #F15D51;
-  }
-}
-@media only screen and (max-width: 1140px) {
-  .nav .navBar {
-    display: none;
-    visibility: hidden;
-    height: 0;
-    width: 0;
-    overflow: hidden;
-    transition: width 0.2s ease-in-out;
-  }
-  .nav .navBar-hidden {
-    background-color: #FFFDFA;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 100;
-    visibility: visible;
-    display: block;
-    height: 100vh;
-  }
-  .nav .navBar-hidden ul {
-    margin-top: 10rem;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-  }
-  .nav .navBar-hidden ul li {
-    margin: 1.5rem 4.5rem;
-  }
-  .nav .navBar-active {
-    width: 70vw;
-  }
-}
 .container {
   z-index: 1000;
   position: relative;
@@ -154,6 +100,10 @@ a:hover, a:focus, a:active {
   position: relative;
   border: none;
   background-color: transparent;
+}
+
+.hamburger:hover {
+  cursor: pointer;
 }
 
 .hamburger__bar {
@@ -191,6 +141,78 @@ a:hover, a:focus, a:active {
   transform: rotate(-135deg);
 }
 
+.shadow-active {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(73, 73, 73, 0.6470588235);
+  z-index: 50;
+}
+
+@media only screen and (min-width: 1141px) {
+  .hamburger {
+    display: none;
+    visibility: hidden;
+    overflow: hidden;
+    height: 0;
+    width: 0;
+  }
+  .nav ul {
+    display: flex;
+    list-style: none;
+    width: 26.938rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav a {
+    color: #5E607A;
+  }
+  .nav a:hover {
+    color: #F15D51;
+  }
+}
+@media only screen and (max-width: 1140px) {
+  .nav .navBar {
+    display: none;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    transition: width 0.2s ease-in-out;
+  }
+  .nav .navBar a:hover {
+    color: #E9AA52;
+  }
+  .nav .navBar-hidden {
+    background-color: #FFFDFA;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    visibility: visible;
+    display: block;
+    height: 100vh;
+  }
+  .nav .navBar-hidden ul {
+    margin-top: 10rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+  }
+  .nav .navBar-hidden ul li {
+    margin: 1.5rem 4.5rem;
+  }
+  .nav .navBar-active {
+    width: 40vw;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .nav .navBar-active {
+    width: 65vw;
+  }
+}
 @font-face {
   font-family: Inter;
   src: url("./assets/fonts/static/Inter-Regular.ttf") format("truetype");
